<resources>
    <string name="app_name">FinAssist</string>
    <string name="login_email">E-mail</string>
    <string name="login_pass">Password</string>
    <string name="login_signup">Sign up</string>
    <string name="login_login">Log in</string>
    <string name="login_passshort">The entered password is too short (minimum is %1$d characters)</string>
    <string name="login_signupsuccess">Account successfully created!</string>
    <string name="login_signupfailed">Failed to create new account. Verify your entered e-mail address is valid, and that you\'re connected to the Internet.</string>
    <string name="login_empty">Both e-mail and password are required fields.</string>
    <string name="login_authfailed">Authentication failed. Check your entered email and password, and verify you\'re connected to the Internet.</string>
    <string name="account_name">Account name:</string>
    <string name="account_type">Account type:</string>
    <string name="account_balance">Account balance (kn):</string>
    <string name="transaction_your_account">Your account:</string>
    <string name="transaction_type">Transaction type:</string>
    <string name="transaction_category">Transaction category:</string>
    <string name="transaction_amount">Amount (kn):</string>
    <string name="general_description">Description:</string>
    <string name="general_description_optional">Description (optional):</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_transaction_accounts">Transaction Accounts</string>
    <string name="menu_settings">Settings</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_delete_transaction_message">Are you sure you want to delete this transaction?</string>
    <string name="dialog_delete_account_message">Are you sure you want to delete this account?\n\nWARNING: this will also delete all transactions that involve this account!</string>
    <string name="message_waiting">Waiting for the list to populate…</string>
    <string name="message_transaction_edit_or_delete">Click a transaction to edit it, or swipe it sideways to delete it.</string>
    <string name="message_account_edit_or_delete">Click an account to edit it, or swipe it sideways to delete it.</string>
    <string name="message_transaction_selection_empty">No transactions match the specified filters.</string>
    <string name="message_add_transaction">You currently have no transactions. Click the button in the bottom of the screen to add a new one!</string>
    <string name="message_add_account">You currently have no transaction accounts. Click the button in the bottom of the screen to add a new one!</string>
    <string name="transaction_from_account">\"From\" account:</string>
    <string name="transaction_to_account">\"To\" account:</string>
    <string name="general_income">Income</string>
    <string name="general_expenditure">Expenditure</string>
    <string name="general_transfer">Transfer</string>
    <string name="menu_spotlight_last_transaction">Your last transaction:</string>
    <string name="menu_spotlight_welcome">Welcome!</string>
    <string name="test_transaction_amount">1322.99 kn</string>
    <string name="test_transaction_description">Groceries and other stuff</string>
    <string name="test_transaction_date">23.12.2018. 23:59</string>
    <string name="test_transaction_category">Food</string>
    <string name="test_transaction_account">Visa Electron</string>
    <string name="search_customize_transaction_filters">Click here to customize filters</string>
    <string name="search_filter_by">Filter by:</string>
    <string name="search_date">Date:</string>
    <string name="search_amount">Amount:</string>
    <string name="search_more_than">More than:</string>
    <string name="search_less_than">Less than:</string>
    <string name="search_to_account">To account:</string>
    <string name="search_from_account">From account:</string>
    <string name="search_type">Type:</string>
    <string name="message_welcome">Welcome to FinAssist!</string>
    <string name="login_remember_me">Remember me</string>
    <string name="search_click_to_filter">(Click here again to apply filters)</string>
    <string name="search_category">Category:</string>
    <string name="search_customize_transaction_filters_secondary">Click here for additional filters</string>
    <string name="statistics_total_balance">Total balance (all accounts):</string>
</resources>
