<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffb7c3c5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/message_welcome" />

    <RelativeLayout
        android:id="@+id/rlSpotlight"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLastTransaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="56dp"
                android:layout_marginRight="56dp"
                android:layout_marginTop="4dp"
                android:text="@string/menu_spotlight_last_transaction" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25" />

                <com.finassist.views.TransactionView
                    android:id="@+id/lastTransactionSpotlight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    app:account="@string/test_transaction_account"
                    app:amount="@string/test_transaction_amount"
                    app:category="@string/test_transaction_category"
                    app:date="@string/test_transaction_date"
                    app:description="@string/test_transaction_description"
                    app:image="@android:drawable/presence_video_busy" />
            </LinearLayout>

        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/spotlightChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp">

        </com.github.mikephil.charting.charts.LineChart>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llSpotlightOld"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTotalBalanceLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="Total balance:" />

                <TextView
                    android:id="@+id/tvTotalBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1234.56 kn" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvIncomeThisMonthLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Income this month:" />

                <TextView
                    android:id="@+id/tvIncomeThisMonthValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4000.00 kn" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvExpenditureThisMonthLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Expenditure this month:" />

                <TextView
                    android:id="@+id/tvExpenditureThisMonthValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3200.00 kn" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="12dp">

        <Button
            android:id="@+id/btnTransactionOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:drawableLeft="@drawable/ic_transaction"
            android:drawablePadding="10dp"
            android:gravity="left|center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/menu_transactions"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnStatistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:drawableLeft="@drawable/ic_statistics"
            android:drawablePadding="10dp"
            android:gravity="left|center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/menu_statistics"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnTransactionAccounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:drawableLeft="@drawable/ic_accounts"
            android:drawablePadding="10dp"
            android:gravity="left|center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/menu_transaction_accounts"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:drawableLeft="@drawable/ic_settings"
            android:drawablePadding="10dp"
            android:gravity="left|center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/menu_settings"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>