<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_bg"
    android:hapticFeedbackEnabled="true"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingTop="4dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/test_transaction_amount"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.77"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:text="@string/test_transaction_description"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/test_transaction_date"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/test_transaction_category"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="0.25"
            android:scaleType="fitXY"
            android:src="@android:drawable/presence_video_busy" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/test_transaction_account"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>
