<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.finassist.activities.TransactionEditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffb7c3c5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="Edit transaction" />

    <TextView
        android:id="@+id/tvFirstAccount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="0.05"
        android:gravity="center_vertical"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/transaction_your_account" />

    <LinearLayout
        android:id="@+id/llFirstAccount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerFirstAccount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.85" />

        <ImageButton
            android:id="@+id/ibAccounts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:src="@drawable/ic_accounts" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvSecondAccount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/transaction_to_account"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llSecondAccount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <Spinner
            android:id="@+id/spinnerSecondAccount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.15" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/transaction_category" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.85" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.15" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.075"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center_vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/transaction_type" />

        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.45" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.15" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.075"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center_vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/transaction_amount" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="bottom"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/general_description_optional" />

    <EditText
        android:id="@+id/etAccountDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="text"
        android:maxLines="1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_accept" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_cancel" />
    </LinearLayout>

</LinearLayout>
